MFH: - Fixed bug #25343 (is_dir() gives warning on FreeBSD).